--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,20 @@
 version: "3.8"
 
 services:
-  nginx:
+  frontend:
     build: .
-    command: "npm run dev"
-    ports:
-      - "82:82"
+    command: "npm run dev -- --host"
     volumes:
       - static_volume:/home/app/microservice/static
+    expose: 
+      - "82"
+    ports:
+      - "82:82"
     restart: always
-    networks:
-      - host
 
 networks:
   generative-network:
 
 volumes:
   static_volume:
+ 
