--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "rutilea-generative-defects-frontend"]
 	path = rutilea-generative-defects-frontend
-	url = http://gitlab.virasad.ir/generative-defects/rutilea-generative-defects-frontend.git
-	branch = develop
+	url = https://github.com/armangiter/generative_defecs_fontend.git
+	branch = main
